--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
       shell: bash
       id: get-version
       run echo "::set-output name=version::${node ./.github/workflows/get-version.js)"
-    - run: scripts/installcli.sh
-    - run: scripts/build.sh
-    - name: Create Release
+      run: scripts/installcli.sh
+      run: scripts/build.sh
+    - name: Create Versioned Release
       id: create_versioned_release
       uses: ncipollo/release-action@v1
       with:
@@ -28,7 +28,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: './module.json,./koboldpressogl.zip'
         tag: v${{ steps.get-version.outputs.version }}
-    - name: Create Release
+    - name: Create Latest Release
       id: create_latest_release
       uses: ncipollo/release-action@v1
       with:
