--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,11 @@ jobs:
       shell: bash
       id: get-version
       run echo "::set-output name=version::${node ./.github/workflows/get-version.js)"
-      run: scripts/installcli.sh
+    - name: Install CLI
+      shell: bash
+      run: run: scripts/installcli.sh
+    - name: Build Artifacts
+      shell: bash
       run: scripts/build.sh
     - name: Create Versioned Release
       id: create_versioned_release
