--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Get Version
       shell: bash
       id: get-version
-      run echo "::set-output name=version::${node ./.github/workflows/get-version.js)"
+      run echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
     - name: Install CLI
       shell: bash
       run: run: scripts/installcli.sh
