Aha! A Missing colon!

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,9 @@ jobs:
     - name: Get Version
       shell: bash
       id: get-version
-      run echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
-    - name: Install CLI
-      shell: bash
-      run: run: scripts/installcli.sh
-    - name: Build Artifacts
-      shell: bash
-      run: scripts/build.sh
+      run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
+    - run: scripts/installcli.sh
+    - run: scripts/build.sh
     - name: Create Versioned Release
       id: create_versioned_release
       uses: ncipollo/release-action@v1
